--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
     "verbatimModuleSyntax": true,
     "noEmit": true,
     // Best practices
-    "strict": true,
+    "strict": false, //true
+    "noImplicitAny": false,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
