--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "cd client && npm install && npm run build"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -20,6 +22,7 @@
     "@trpc/client": "^11.1.2",
     "@trpc/react-query": "^11.1.2",
     "@trpc/server": "^11.1.2",
+    "@vercel/node": "^5.1.16",
     "hono": "^4.7.9",
     "moment": "^2.30.1",
     "prisma": "^6.8.2",
