--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,11 @@
   "private": true,
   "scripts": {
     "dev": "bun run index.ts",
-    "build": "cd client && npm install && npm run build"
+    "build": "cd .. && cd client && npm install && npm run build"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/node": "^22.15.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
