--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@prisma": [
-        "prisma/index"
+        "server/prisma/index"
       ],
       "@server/*": [
         "server/*"
