--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run index.ts",
-    "build": "cd .. && cd client && npm install && npm run build",
-    "start": "ts-node index.ts"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
     "@types/bun": "latest",
