--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "server/index.ts",
+            "src": "index.ts",
             "use": "@vercel/node"
         }
     ],
@@ -13,7 +13,7 @@
         },
         {
             "src": "/api/trpc/(.*)",
-            "dest": "/server/index.ts"
+            "dest": "/index.ts"
         }
     ]
 }
