--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
     "version": 2,
     "builds": [
         {
-            "src": "index.ts",
+            "src": "dist/index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/client/$1"
+            "dest": "/client/dist/$1"
         },
         {
             "src": "/api/trpc/(.*)",
-            "dest": "/index.ts"
+            "dest": "/index.js"
         }
     ]
 }
