--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "b2bmobile",
   "scripts": {
+    "start": "node dist/index.js",
     "build": "tsc",
-    "start": "bun run index"
+    "dev": "bun run index",
+    "deploy": "vercel"
   },
   "devDependencies": {
     "@types/bun": "latest",
