--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,17 @@
     "version": 2,
     "builds": [
         {
-            "src": "dist/index.js",
+            "src": "/dist/index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/api/(.*)",
             "dest": "/dist/index.js"
         },
         {
-            "src": "/api/trpc/(.*)",
+            "src": "/(.*)",
             "dest": "/dist/index.js"
         }
     ]
